# camper-backend-user-service

./: main.py  pyproject.toml
app/: health.py  server.py
core/: config.py
core/db/: session.py
core/db/mixins/: audit.py  base.py  timestamp.py
core/fastapi/middlewares/: __init__.py
migrations/: env.py
migrations/versions/: c25e37502c04_initial_db_commit.py
